example-voting-app/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
      app: demo-voting-app
  template:
    metadata:
      name: postgres-pod
      labels:
        app: demo-voting-app
        name: postgres-pod
    spec:
      containers:
      - 
        name: postgres
        image: postgres:9.4
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: db-service
    app: demo-voting-app
spec:
  type: ClusterIP
  selector:
    name: postgres-pod
    app: demo-voting-app
  ports:
  - port: 5432
    targetPort: 5432
