example-voting-app/result-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: result-app-pod
      app: demo-voting-app
  template:
    metadata:
      name: result-app-pod
      labels:
        app: demo-voting-app
        name: result-app-pod
    spec:
      containers:
      - name: result-app
        image: dockersamples/examplevotingapp_result:before
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    name: result-service
    app: demo-voting-app
spec:
  type: NodePort
  selector:
    name: result-app-pod
    app: demo-voting-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
