example-voting-app/voting-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      name: voting-app-pod
      app: demo-voting-app
  template:
    metadata:
      name: voting-app-pod
      labels:
        app: demo-voting-app
        name: voting-app-pod
    spec:
      containers:
      - name: voting-app
        image: dockersamples/examplevotingapp_vote:before
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    name: voting-service
    app: demo-voting-app
spec:
  selector:
    name: voting-app-pod
    app: demo-voting-app
  ports:
  - name: http
    port: 80
    targetPort: 80
