example-voting-app/worker-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worker-app-pod
      app: demo-voting-app
  template:
    metadata:
      name: worker-app-pod
      labels:
        app: demo-voting-app
        name: worker-app-pod
    spec:
      containers:
      - name: worker-app
        image: dockersamples/examplevotingapp_worker
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  labels:
    name: worker-service
    app: demo-voting-app
spec:
  type: ClusterIP
  selector:
    name: worker-pod
    app: demo-voting-app
  ports:
  - port: 6379
    targetPort: 6379
